--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,7 @@
                             Information about Agnes Scott College's Bradley Observatory, including facilities, 
                             equipment, and observing opportunities.
                         </p>
-                        <a href="https://www.agnesscott.edu/bradley-observatory/index.html" target="_blank">Visit Site →</a>
+                        <a href="https://www.agnesscott.edu/bradleyobservatory" target="_blank">Visit Site →</a>
                     </div>
                 </div>
 
