--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
                 
                 <div class="publication">
                     <p class="pub-authors">Hubbard-James, H.-S., et al. </p>
-                    <p class="pub-title">The Solar Neighborhood LV: A Spectroscopic Census of K Dwarf Activity and Age Indicators</p>
+                    <p class="pub-title">The Solar Neighborhood LV: Spectral Characterization of an Equatorial Sample of 580 K Dwarfs</p>
                     <p class="pub-details">The Astronomical Journal, Submitted (2025)</p>
                 </div>
 
