--- a/people.html
+++ b/people.html
@@ -45,7 +45,7 @@
                         <h3>Dr. Hodari-Sadiki Hubbard-James</h3>
                         <p class="person-title">Assistant Professor of Astronomy & Co-Director, Bradley Observatory</p>
                         <p class="person-bio">
-                            Hodari has been Assistant Professor of Astronomy and Co-Director of the Bradley Observatory at Agnes 
+                            Dr Hubbard-James has been Assistant Professor of Astronomy and Co-Director of the Bradley Observatory at Agnes 
                             Scott College since July 2023. He received his B.A. in Physics from Berea College, his M.S. in Biomedical 
                             Engineering from the University of Cincinnati, and his Ph.D. in Astronomy from Georgia State University. 
                             In addition to directing research at the ISLANDS Lab, he teaches courses in astronomy, astrophysics, and 
